tests/snapshots/tui_snapshot__tui_tool_auto_collapsed.snap
---
source: tests/tui_snapshot.rs
expression: view
---
]0;Pi · Dummy Model · ready  Pi (Dummy Model)
  ctrl+l: model  ctrl+p: next  ctrl+shift+p: prev  ctrl+o: tools  shift+tab: ...
  resources: 0 skills, 0 prompts, 0 themes, 0 extensions


  ▶ Tool read output: (60 lines, collapsed)
    line 1
    Tool read output:
    line 2
    Tool read output:
    line 3
    ... 54 more lines

  Assistant:

    Done.
  [100%] ↑/↓ PgUp/PgDn Shift+Up/Down to scroll

  Enter: send  Shift+Enter: newline  Alt+Enter: multi-line  [thinking: off]
  │ > Type a message... (/help, /exit)
  │ >
  │ >

  󰚩 Dummy Model / ACT / ctx: 0%
