tests/snapshots/tui_snapshot__tui_tool_output_message.snap
---
source: tests/tui_snapshot.rs
expression: view
---
]0;Pi · Dummy Model · ready  Pi (Dummy Model)
  ctrl+l: model  ctrl+p: next  ctrl+shift+p: prev  ctrl+o: tools  shift+tab: ...
  resources: 0 skills, 0 prompts, 0 themes, 0 extensions


  Tool read output:
file contents here

  Enter: send  Shift+Enter: newline  Alt+Enter: multi-line  [thinking: off]
  │ > Type a message... (/help, /exit)
  │ >
  │ >

  󰚩 Dummy Model / ACT / ctx: 0%
  Tokens: 0 in / 0 out  |  Persist: balanced  |  /help  |  Ctrl+C: quit
